[profile.release]
panic = "unwind"

[workspace]
members = [
	"node",
	"pallets/*",
	"runtime",
]
[workspace.dependencies]
ethereum = { version = "0.14.0", default-features = false }
ethereum-types = { version = "0.14.1", default-features = false }
evm = { git = "https://github.com/rust-blockchain/evm", rev = "b7b82c7e1fc57b7449d6dfa6826600de37cc1e65", default-features = false }



